Add HTML and JSON files for AJAX functionality and server setup